Simplified the HTML structure for easier CSS styling later

--- a/index.html
+++ b/index.html
@@ -34,15 +34,11 @@
 
     <section id="section1">
         <div>
-            <div>
-                <h2>This website is awesome</h2>
-                <p>This website has some subtext that goes here under the main title. It's a small font and the color is lower contrast.</p>
-                <button>Sign up</button>
-            </div>
-            <div class="placeholder-img">
-                <img id="tulip" src="/tulip-7882705_640.jpg"> 
-            </div>
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title. It's a small font and the color is lower contrast.</p>
+            <button>Sign up</button>
         </div>
+        <img id="tulip" src="/tulip-7882705_640.jpg"> 
     </section>
 
     <section id="section2">
@@ -68,18 +64,20 @@
     </section>
 
     <section id="section3">
-        Lorem ipsum odor amet, consectetuer adipiscing elit. Dui tristique est vel quam hac congue dui. Fames viverra tempus class mus in. Commodo praesent tincidunt penatibus imperdiet platea porta.
+        <p>Lorem ipsum odor amet, consectetuer adipiscing elit.
+        Dui tristique est vel quam hac congue dui. Fames viverra tempus class mus in.
+        Commodo praesent tincidunt penatibus imperdiet platea porta.
+        </p>
+        <p>-Thor, God of Thunder</p>
     </section>
 
     <section id="section4">
         <div>
             <div>
-                <div>
-                    <p><strong>Call to action! It's time!</strong></p>
-                    <p>Sign up for our product by clicking that button right over there</p>
-                </div>
-                <button>Sign up</button>    
+                <p><strong>Call to action! It's time!</strong></p>
+                <p>Sign up for our product by clicking that button right over there</p>
             </div>
+            <button>Sign up</button>    
         </div>
     </section>
 
