finalized html file

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
   <main>
 
     <section id="section1">
-        <div>
+        <div class="hero-txt">
             <h2>This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title. It's a small font and the color is lower contrast.</p>
             <button>Sign up</button>
         </div>
-        <img id="tulip" src="/tulip-7882705_640.jpg"> 
+        <div class="hero-img">
+            <img id="tulip" src="/tulip-7882705_640.jpg">
+        </div>
     </section>
 
     <section id="section2">
@@ -64,17 +66,17 @@
     </section>
 
     <section id="section3">
-        <p>Lorem ipsum odor amet, consectetuer adipiscing elit.
+        <p class="quote">Lorem ipsum odor amet, consectetuer adipiscing elit.
         Dui tristique est vel quam hac congue dui. Fames viverra tempus class mus in.
         Commodo praesent tincidunt penatibus imperdiet platea porta.
         </p>
-        <p>-Thor, God of Thunder</p>
+        <p class="attribution">-Thor, God of Thunder</p>
     </section>
 
     <section id="section4">
-        <div>
+        <div id="call">
             <div>
-                <p><strong>Call to action! It's time!</strong></p>
+                <h3>Call to action! It's time!</h3>
                 <p>Sign up for our product by clicking that button right over there</p>
             </div>
             <button>Sign up</button>    
