--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button>Sign up</button>
         </div>
         <div class="hero-img">
-            <img id="tulip" src="/tulip-7882705_640.jpg">
+            <img id="tulip" src="tulip-7882705_640.jpg">
         </div>
     </section>
 
